add new services
add two new services: registration and transfer credit (bank & non bank)
