# src/assets/swagger/swagger-topup.json
@@ -1,42 +1,116 @@
 {
   "swagger": "2.0",
-  "host" : "api-devsitopenapi.herokuapp.com",
-  "schemes" : [ "https" ],
+  "host": "api-devsitopenapi.herokuapp.com",
+  "schemes": [
+    "https"
+  ],
   "paths": {
     "/bi/openapi/topup-account/inquiry": {
       "post": {
         "tags": [
-          "TransferCredit"
+          "CustomerTopUp"
         ],
-        "description": "Please use this value for sandbox:\r\n            \r\n    customerNumber  : 17081945\r\n            \r\nSample Request\r\n\r\n    {\r\n        \"clientId\":\"53519978789302243205291950786565\",\r\n        \"reqMsgId\":\"8590287025696747853519978789302243205291950786565477980600171914\",\r\n        \"customerNumber\":\"17081945\",\r\n        \"amount\":{\r\n            \"value\": 10000.00,\r\n            \"currency\":\"IDR\"\r\n        },\r\n        \"transactionDate\":\"2020-12-21T14:56:11+07:00\",\r\n        \"partnerTrxId\":\"8590287535199787893022432052919507865650256967478535199787893022\",\r\n        \"additionalInfo\":{\r\n            \"xxxxxx\":\"xxxxxx\"\r\n        }\r\n    }",
+        "description": "Please use this value for sandbox:\r\n            \r\n    customerNumber  : 17081945\r\n            \r\nSample Request\r\n\r\n    {\r\n        \"clientId\": \"53519978789302243205291950786565\",\r\n        \"reqMsgId\": \"8590287025696747853519978789302243205291950786565477980600171914\",\r\n        \"customerNumber\": \"17081945\",\r\n        \"amount\": {\r\n            \"value\": 10000.00,\r\n            \"currency\": \"IDR\"\r\n        },\r\n        \"transactionDate\": \"2020-12-21T14:56:11+07:00\",\r\n        \"partnerTrxId\": \"8590287535199787893022432052919507865650256967478535199787893022\",\r\n        \"currency\": \"IDR\",\r\n        \"additionalInfo\": {\r\n            \"xxxxxx\": \"xxxxxx\"\r\n        }\r\n    }",
         "consumes": [
           "application/json"
         ],
         "parameters": [
           {
             "in": "header",
+            "name": "Content-Type",
+            "description": "e.g application/json",
+            "type": "string",
+            "maxLength": 16
+          },
+          {
+            "in": "header",
             "name": "Authorization",
+            "description": "e.g Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJqdGki",
             "required": true,
             "type": "string"
           },
           {
             "in": "header",
             "name": "Authorization-Customer",
+            "description": "e.g Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJqdGki",
             "required": true,
             "type": "string"
           },
           {
             "in": "header",
             "name": "X-TIMESTAMP",
+            "description": "e.g 2020-01-01T00:00:00+07:00",
             "required": true,
             "type": "string",
             "maxLength": 25
           },
           {
             "in": "header",
+            "name": "X-CLIENT-KEY",
+            "description": "Pleae use your clinet id",
+            "type": "string"
+          },
+          {
+            "in": "header",
             "name": "X-SIGNATURE",
+            "description": "e.g 7c8f0a2a7e96fb72f7ab9b675e2a42c3c6474",
             "required": true,
             "type": "string"
+          },
+          {
+            "in": "header",
+            "name": "ORIGIN",
+            "description": "e.g www.yourdomain.com",
+            "type": "string"
+          },
+          {
+            "in": "header",
+            "name": "X-PARTNER-ID",
+            "description": "e.g 82150823919040624621823174737537",
+            "type": "string",
+            "maxLength": 32
+          },
+          {
+            "in": "header",
+            "name": "X-EXTERNAL-ID",
+            "description": "e.g 41807553358950093184162180797837",
+            "type": "string",
+            "maxLength": 32
+          },
+          {
+            "in": "header",
+            "name": "X-IP-ADDRESS",
+            "description": "e.g 172.24.281.24",
+            "type": "string",
+            "maxLength": 15
+          },
+          {
+            "in": "header",
+            "name": "X-DEVICE-ID",
+            "description": "e.g 09864ADCASA",
+            "type": "string",
+            "maxLength": 400
+          },
+          {
+            "in": "header",
+            "name": "X-LATITUDE",
+            "description": "e.g -6.1617169",
+            "type": "string",
+            "maxLength": 10
+          },
+          {
+            "in": "header",
+            "name": "X-LONGITUDE",
+            "description": "e.g 106.664394",
+            "type": "string",
+            "maxLength": 10
+          },
+          {
+            "in": "header",
+            "name": "CHANNEL-ID",
+            "description": "e.g 95221",
+            "type": "string",
+            "maxLength": 5
           },
           {
             "in": "body",
@@ -55,37 +129,109 @@
     "/bi/openapi/topup-account/transaction": {
       "post": {
         "tags": [
-          "TransferCredit"
+          "CustomerTopUp"
         ],
-        "description": "Please use this value for sandbox:\r\n            \r\n    customerNumber  : 17081945\r\n            \r\nSample Request\r\n\r\n    {\r\n        \"clientId\": \"53519978789302243205291950786565\",\r\n        \"reqMsgId\": \"8590287025696747853519978789302243205291950786565477980600171914\",\r\n        \"customerNumber\": \"17081945\",\r\n        \"customerName\": \"John Doe\",\r\n        \"amount\": {\r\n            \"value\": 10000.0,\r\n            \"currency\": \"IDR\"\r\n        },\r\n        \"feeAmount\": {\r\n            \"value\": 10000.0,\r\n            \"currency\": \"IDR\"\r\n        },\r\n        \"currency\": \"IDR\",\r\n        \"transactionDate\": \"2020-12-21T14:56:11+07:00\",\r\n        \"partnerTrxId\": \"8590287535199787893022432052919507865650256967478535199787893022\",\r\n        \"sessionId\": \"883737GHY8839\",\r\n        \"categoryId\": \"6\",\r\n        \"notes\": \"notes test\",\r\n        \"additionalInfo\": {\r\n            \"xxxxxx\": \"xxxxxx\"\r\n        }\r\n    }",
+        "description": "Please use this value for sandbox:\r\n            \r\n    customerNumber  : 17081945\r\n            \r\nSample Request\r\n\r\n    {\r\n        \"clientId\": \"53519978789302243205291950786565\",\r\n        \"reqMsgId\": \"8590287025696747853519978789302243205291950786565477980600171914\",\r\n        \"customerNumber\": \"17081945\",\r\n        \"customerName\": \"John Doe\",\r\n        \"amount\": {\r\n            \"value\": \"10000.00\",\r\n            \"currency\": \"IDR\"\r\n        },\r\n        \"feeAmount\": {\r\n            \"value\": \"10000.00\",\r\n            \"currency\": \"IDR\"\r\n        },\r\n        \"currency\": \"IDR\",\r\n        \"transactionDate\": \"2020-12-21T14:56:11+07:00\",\r\n        \"partnerTrxId\": \"8590287535199787893022432052919507865650256967478535199787893022\",\r\n        \"sessionId\": \"883737GHY8839\",\r\n        \"categoryId\": \"6\",\r\n        \"notes\": \"notes test\",\r\n        \"additionalInfo\": {\r\n            \"xxxxxx\": \"xxxxxx\"\r\n        }\r\n    }",
         "consumes": [
           "application/json"
         ],
         "parameters": [
           {
             "in": "header",
+            "name": "Content-Type",
+            "description": "e.g application/json",
+            "type": "string",
+            "maxLength": 16
+          },
+          {
+            "in": "header",
             "name": "Authorization",
+            "description": "e.g Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJqdGki",
             "required": true,
             "type": "string"
           },
           {
             "in": "header",
             "name": "Authorization-Customer",
+            "description": "e.g Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJqdGki",
             "required": true,
             "type": "string"
           },
           {
             "in": "header",
             "name": "X-TIMESTAMP",
+            "description": "e.g 2020-01-01T00:00:00+07:00",
             "required": true,
             "type": "string",
             "maxLength": 25
           },
           {
             "in": "header",
+            "name": "X-CLIENT-KEY",
+            "description": "Pleae use your clinet id",
+            "type": "string"
+          },
+          {
+            "in": "header",
             "name": "X-SIGNATURE",
+            "description": "e.g 7c8f0a2a7e96fb72f7ab9b675e2a42c3c6474",
             "required": true,
             "type": "string"
+          },
+          {
+            "in": "header",
+            "name": "ORIGIN",
+            "description": "e.g www.yourdomain.com",
+            "type": "string"
+          },
+          {
+            "in": "header",
+            "name": "X-PARTNER-ID",
+            "description": "e.g 82150823919040624621823174737537",
+            "type": "string",
+            "maxLength": 32
+          },
+          {
+            "in": "header",
+            "name": "X-EXTERNAL-ID",
+            "description": "e.g 41807553358950093184162180797837",
+            "type": "string",
+            "maxLength": 32
+          },
+          {
+            "in": "header",
+            "name": "X-IP-ADDRESS",
+            "description": "e.g 172.24.281.24",
+            "type": "string",
+            "maxLength": 15
+          },
+          {
+            "in": "header",
+            "name": "X-DEVICE-ID",
+            "description": "e.g 09864ADCASA",
+            "type": "string",
+            "maxLength": 400
+          },
+          {
+            "in": "header",
+            "name": "X-LATITUDE",
+            "description": "e.g -6.1617169",
+            "type": "string",
+            "maxLength": 10
+          },
+          {
+            "in": "header",
+            "name": "X-LONGITUDE",
+            "description": "e.g 106.664394",
+            "type": "string",
+            "maxLength": 10
+          },
+          {
+            "in": "header",
+            "name": "CHANNEL-ID",
+            "description": "e.g 95221",
+            "type": "string",
+            "maxLength": 5
           },
           {
             "in": "body",
